# holocron

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  llms-full.txt  llms.txt  objects.inv  pyproject.toml  sitemap.xml
.github/: collect_env.py  dependabot.yml  generate_model_zoo.py  verify_deps_sync.py  verify_labels.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: backend.yml  demo.yml  docs.yml  package.yml  pr-merged.yml  push.yml  quality.yml  scripts.yml
api/: Dockerfile  README.md  pyproject.toml
api/app/: config.py  main.py  vision.py
api/tests/: conftest.py
demo/: app.py  requirements.txt
docs/: build.sh  mkdocs.yml
docs/docs/: index.md
docs/docs/getting-started/: installation.md
docs/docs/reference/: ops.md  optim.md  trainer.md  transforms.md  utils.data.md  utils.md
docs/docs/reference/models/: models.md
docs/docs/reference/models/classification/: convnext.md  darknet.md  darknetv2.md  darknetv3.md  res2net.md  resnet.md  resnext.md  sknet.md  tridentnet.md
docs/source/: conf.py  installing.rst
getting-started/installation/: index.html  index.md
getting-started/notebooks/: index.html  index.md
holocron/: __init__.py
holocron/models/: checkpoints.py  presets.py  utils.py
holocron/models/classification/: convnext.py  darknet.py  darknetv2.py  darknetv3.py  darknetv4.py  mobileone.py  pyconv_resnet.py  repvgg.py  res2net.py  resnet.py  rexnet.py  sknet.py  tridentnet.py
holocron/models/detection/: yolo.py  yolov2.py  yolov4.py
holocron/models/segmentation/: unet.py  unet3p.py  unetpp.py
holocron/nn/: functional.py  init.py
holocron/nn/modules/: activation.py  attention.py  conv.py  downsample.py  dropblock.py  lambda_layer.py  loss.py
holocron/ops/: boxes.py
holocron/optim/: __init__.py  adabelief.py  adamp.py  adan.py  ademamix.py  lamb.py  lars.py  ralars.py  tadam.py  wrapper.py
holocron/trainer/: classification.py  core.py  detection.py  segmentation.py  utils.py
holocron/transforms/: interpolation.py
holocron/utils/: misc.py
holocron/utils/data/: collate.py
mkdocs_src/: mkdocs.yml
mkdocs_src/docs/: index.md
mkdocs_src/docs/getting-started/: notebooks.md
mkdocs_src/docs/reference/: models.md  nn.functional.md  nn.md  ops.md  optim.md  trainer.md  transforms.md  utils.data.md  utils.md
mkdocs_src/docs/reference/classification/: convnext.md  pyconv_resnet.md  resnext.md
mkdocs_src/docs/reference/models/: models.md
mkdocs_src/docs/reference/models/classification/: darknet.md  darknetv2.md  darknetv3.md  darknetv4.md  mobileone.md  pyconv_resnet.md  repvgg.md  res2net.md  resnet.md  rexnet.md  sknet.md  tridentnet.md
notes/changelog/: index.html
reference/models/classification/convnext/: index.html
reference/models/classification/darknet/: index.html
reference/models/classification/darknetv2/: index.html
reference/models/classification/darknetv3/: index.html
reference/models/classification/darknetv4/: index.html
reference/models/classification/mobileone/: index.html
reference/models/classification/pyconv_resnet/: index.html
reference/models/classification/repvgg/: index.html
reference/models/classification/res2net/: index.html
reference/models/classification/resnet/: index.html
reference/models/classification/resnext/: index.html
reference/models/classification/rexnet/: index.html
reference/models/classification/sknet/: index.html
reference/models/classification/tridentnet/: index.html
reference/models/models/: index.html  index.md
reference/nn/: index.html  index.md
reference/ops/: index.html  index.md
reference/optim/: index.html  index.md
reference/trainer/: index.html  index.md
reference/transforms/: index.html  index.md
reference/utils/: index.html  index.md
reference/utils.data/: index.html  index.md
references/: clean_checkpoint.py
references/classification/: train.py
references/detection/: train.py  transforms.py
references/segmentation/: train.py  transforms.py
scripts/: eval_latency.py  export_to_onnx.py
search/: search_index.json
tests/: test_models.py  test_models_classification.py  test_models_detection.py  test_models_segmentation.py  test_nn_activation.py  test_nn_loss.py  test_trainer.py  test_transforms.py
