[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pylocron"
version = "0.2.2.dev0"
description = "Modules, operations and models for computer vision in PyTorch"
authors = [{name = "François-Guillaume Fernandez", email = "fg-feedback@protonmail.com"}]
maintainers = [{ name = "François-Guillaume Fernandez", email = "fg-feedback@protonmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<4"
license = {file = "LICENSE"}
keywords = ["pytorch", "deep learning", "computer vision", "models"]
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.24.0,<1.0.0",
    "tqdm>=4.1.0",
    "numpy>=1.19.5,<3.0.0",
    "fastprogress>=1.0.0,<2.0.0",
    "matplotlib>=3.0.0,<4.0.0",
    "huggingface-hub>=1.0.0,<2.0.0",
    # Indirect deps
    # cf. https://github.com/advisories/GHSA-98vv-pw6r-q6q4
    # cf. https://github.com/pytorch/vision/issues/4934
    # https://github.com/frgfm/Holocron/security/dependabot/5
    "Pillow>=8.4.0,!=9.2.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-cov==6.2.1",
    "pytest-pretty==1.3.0",
    "onnx>=1.13.0,<2.0.0",
    "onnxscript>=0.5.0,<1.0.0",
]
training = [
    "wandb>=0.10.31,<1.0.0",
    "codecarbon>=2.0.0,<3.0.0",
]
quality = [
    "ruff==0.14.2",
    "ty==0.0.1a25",
    "types-tqdm",
    "types-Pillow",
    "pre-commit==4.3.0",
]
scripts = [
    "onnxruntime>=1.22.0,<2.0.0",
    "onnxscript>=0.5.0,<1.0.0",
]
docs = [
    # cf. https://github.com/mkdocs/catalog
    "mkdocs==1.6.1",
    "mkdocs-material[imaging]==9.6.22",
    "mkdocstrings[python]==0.30.1",
    "griffe-typingdoc==0.3.0",
    "mkdocs-llmstxt==0.4.0",
]


[project.urls]
documentation = "https://frgfm.github.io/Holocron"
repository = "https://github.com/frgfm/Holocron"
tracker = "https://github.com/frgfm/Holocron/issues"
changelog = "https://frgfm.github.io/Holocron/latest/changelog.html"

[tool.uv.build-backend]
module-name = "holocron"
module-root = ""

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "--cov=holocron"

[tool.ruff]
line-length = 120
target-version = "py311"
preview = true

[tool.ruff.lint]
select = [  # https://docs.astral.sh/ruff/rules/
    "ERA",  # eradicate
    "FAST",  # FastAPI
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "ASYNC",  # flake8-async
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "COM",  # flake8-commas
    "C4",  # flake8-comprehensions
    "CPY",  # flake8-copyright
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "LOG",  # flake8-logging
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "FLY",  # flynt
    "I",  # isort
    "NPY",  # numpy
    "N",  # pep8-naming
    "PERF",  # perflint
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "DOC",  # pydoclint
    "D",  # pydocstyle
    "F",  # pyflakes
    "PGH",  # pygrep-hooks
    "PL",  # pylint
    "UP",  # pyupgrade
    "FURB",  # refurb
    "RUF",  # ruff specific
    "TRY",  # tryceratops
]
ignore = [
    # formatter conflicts https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191", "E111", "E114", "E117", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "E501",
    "B904",  # raise from
    "C901",  # too complex
    "F403",  # star imports
    "E731",  # lambda assignment
    "C416",  # list comprehension to list()
    "ANN002",  # missing type annotations on *args
    "ANN003",  # missing type annotations on **kwargs
    "N812",  # lowercase imported as non-lowercase
    "ISC001",  # implicit string concatenation (handled by format)
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "D205",  # Blank line before docstring
    "D100",  # missing doctring in public module
    "D401",  # first docstring line should be in imperative mood
    "D203", "D204",  # blank line required before & after docstring
    "D413",  # blank line after last docstring section
    "D400", "D415",  # first docstring line should end with a period
    "D213",  # docstring text can start on first line
    "D107", "D105",  # no docstring for __init__ and magic methods
    "TRY003",  # long messages outside exception class
    "ERA001",  # commented-out code
    "PLR2004",  # magic value comparison
    "PLR0913",  # too many arguments in function definition
    "PLR0917",  # too many positional arguments in function definition
    "PT011",  # pytest.raises too broad, use match parameter
    "PLR0914",  # too many local variables
]
exclude = [".git"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["holocron", "app"]
known-third-party = ["wandb", "fastapi"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["I001", "F401", "CPY001", "D104"]
"scripts/**.py" = ["D", "T201", "ANN"]
".github/**.py" = ["D", "T201", "S602", "ANN"]
"docs/**.py" = ["E402", "D103", "ANN", "A001", "ARG001"]
"tests/**.py" = ["D103", "CPY001", "S101", "ANN", "SLF001", "D105", "PLR0914"]
"demo/**.py" = ["D103", "ANN"]
"api/**.py" = ["D103", "D101", "DOC201"]
"api/app/main.py" = ["ANN"]
"api/tests/**.py" = ["CPY001", "S101", "ANN", "ARG001"]
"references/**.py" = ["D101", "D103", "T201", "ANN", "D105", "D102", "SLF001", "PLR0914", "PLR0915", "PLR0912", "PLC2701"]
"setup.py" = ["T201"]
"holocron/nn/modules/**.py" = ["N806", "D102"]
"holocron/models/classification/**.py" = ["N801"]
"holocron/models/*/**.py" = ["D101", "ARG", "D102"]
"holocron/nn/functional.py" = ["N802", "ARG", "PLR0912", "PLR6104"]
"holocron/trainer/**.py" = ["ARG", "PLW2901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.11"
python-platform = "linux"

[tool.ty.rules]
unresolved-import = "warn"

[tool.ty.src]
include = ["holocron/"]
